Forgot to clone in demo

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -23,6 +23,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e1ee95aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/Torfinhell/ASR_Conformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "70279bb1",
    "metadata": {},
    "outputs": [],
@@ -40,7 +50,8 @@
    "outputs": [],
    "source": [
     "!pip install uv\n",
-    "!uv sync"
+    "!uv sync\n",
+    "!pip install wget"
    ]
   },
   {
